<resources>
    <string name="app_name">Полігід</string>
    <string name="search">Вибрати приміщення</string>
    <string name="todo">TODO</string>
    <string name="search_hint">Введіть номер кабінету</string>
    <string name="library">Бібліотека</string>
    <string name="woman_wc">Жіночий туалет</string>
    <string name="man_wc">Чоловічий туалет</string>
    <string name="mechanic">Механічна майстерня</string>
    <string name="cloth">Швейна</string>
    <string name="wood">Деревообробна майстерня</string>
    <string name="act_hall">Актовий зал</string>
    <string name="eat_room">Їдальня</string>
    <string name="health_room">Медпункт</string>
    <string name="lection_hall">Лекційна зала</string>
    <string name="gym">Спортзал</string>
    <string name="accountant">Бухгалтерія</string>
    <string name="department">Завідувач відділення</string>
    <string name="teachers">Викладацька</string>
    <string name="director">Приймальня/Директор</string>
    <string name="training">Тренувальний зал</string>
    <string name="slusar">Слюсарна майстерня</string>
    <string name="reading_room">Читальний зал</string>
    <string name="key_room">Видача ключів</string>

    <string name="button">Button</string>
    <string name="todo2">todo</string>
    <string name="main">Меню</string>
    <string name="level">Поверх</string>
    <string name="initials">Ініціали викладача</string>
    <string name="surname">Введіть прізвище</string>
    <string name="searchdb">Пошук</string>
</resources>